--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,12 +38,17 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.google.android.gms:play-services:8.1.0'
+    //implementation 'com.google.android.gms:play-services:12.0.1'
     //implementation group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5'
     implementation (group: 'org.apache.httpcomponents' , name: 'httpmime' , version: '4.3.5') {
         exclude module: 'org.apache.httpcomponents:httpclient'
     }
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.pkmmte.view:circularimageview:1.1'
+    implementation 'com.google.firebase:firebase-firestore:21.2.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
 }
+apply plugin: 'com.google.gms.google-services'
