--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,14 +28,16 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
 
-    <application android:name=".App"
+    <application
+        android:name=".App"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/organic"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:largeHeap="true"
+        android:roundIcon="@drawable/organic"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity
@@ -71,9 +73,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.develeno.prestashopandroidclient.MainActivity" />
         </activity>
-        <activity
-            android:name="com.develeno.prestashopandroidclient.SearchActivity"
-            />
+        <activity android:name="com.develeno.prestashopandroidclient.SearchActivity" />
         <activity
             android:name="com.develeno.prestashopandroidclient.DevelenoApps"
             android:parentActivityName="com.develeno.prestashopandroidclient.MainActivity">
@@ -81,10 +81,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.develeno.prestashopandroidclient.MainActivity" />
         </activity>
-        <activity
-            android:name="com.develeno.prestashopandroidclient.SignInActivity" />
-        <activity
-            android:name="com.develeno.prestashopandroidclient.SignUpActivity" />
+        <activity android:name="com.develeno.prestashopandroidclient.SignInActivity" />
+        <activity android:name="com.develeno.prestashopandroidclient.SignUpActivity" />
         <activity
             android:name="com.develeno.prestashopandroidclient.ManageAccount"
             android:parentActivityName="com.develeno.prestashopandroidclient.MainActivity">
@@ -120,22 +118,21 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.develeno.prestashopandroidclient.ManageAccount" />
         </activity>
-       <!-- <activity
-            android:name="com.facebook.FacebookActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Translucent.NoTitleBar" />-->
+        <!-- <activity
+             android:name="com.facebook.FacebookActivity"
+             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize"
+             android:label="@string/app_name"
+             android:theme="@style/Theme.Translucent.NoTitleBar" />-->
 
-       <!-- <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
-        <provider
-            android:name="com.facebook.FacebookContentProvider"
-            android:authorities="com.facebook.app.FacebookContentProvider1078831162150265"
-            android:exported="true" />-->
+        <!-- <meta-data
+             android:name="com.facebook.sdk.ApplicationId"
+             android:value="@string/facebook_app_id" />
+         <provider
+             android:name="com.facebook.FacebookContentProvider"
+             android:authorities="com.facebook.app.FacebookContentProvider1078831162150265"
+             android:exported="true" />-->
 
-        <activity
-            android:name="com.develeno.prestashopandroidclient.OrderSuccessFullActivity"/>
+        <activity android:name="com.develeno.prestashopandroidclient.OrderSuccessFullActivity" />
         <activity
             android:name="com.develeno.prestashopandroidclient.OrderHistoryActivty"
             android:parentActivityName="com.develeno.prestashopandroidclient.ManageAccount">
@@ -143,34 +140,33 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.develeno.prestashopandroidclient.ManageAccount" />
         </activity>
-        <activity
-            android:name="com.develeno.prestashopandroidclient.AboutActivity"/>
+        <activity android:name="com.develeno.prestashopandroidclient.AboutActivity" />
 
         <!--<service android:name="com.parse.PushService" />-->
 
         <!--<receiver-->
-            <!--android:name="com.parse.ParsePushBroadcastReceiver"-->
-            <!--android:exported="false">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="com.parse.push.intent.RECEIVE" />-->
-                <!--<action android:name="com.parse.push.intent.DELETE" />-->
-                <!--<action android:name="com.parse.push.intent.OPEN" />-->
-            <!--</intent-filter>-->
+        <!--android:name="com.parse.ParsePushBroadcastReceiver"-->
+        <!--android:exported="false">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="com.parse.push.intent.RECEIVE" />-->
+        <!--<action android:name="com.parse.push.intent.DELETE" />-->
+        <!--<action android:name="com.parse.push.intent.OPEN" />-->
+        <!--</intent-filter>-->
         <!--</receiver>-->
         <!--<receiver-->
-            <!--android:name="com.parse.GcmBroadcastReceiver"-->
-            <!--android:permission="com.google.android.c2dm.permission.SEND">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="com.google.android.c2dm.intent.RECEIVE" />-->
-                <!--<action android:name="com.google.android.c2dm.intent.REGISTRATION" />-->
+        <!--android:name="com.parse.GcmBroadcastReceiver"-->
+        <!--android:permission="com.google.android.c2dm.permission.SEND">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="com.google.android.c2dm.intent.RECEIVE" />-->
+        <!--<action android:name="com.google.android.c2dm.intent.REGISTRATION" />-->
 
-                <!--<category android:name="com.develeno.prestashopandroidclient" />-->
-            <!--</intent-filter>-->
+        <!--<category android:name="com.develeno.prestashopandroidclient" />-->
+        <!--</intent-filter>-->
         <!--</receiver>-->
 
         <!--<meta-data-->
-            <!--android:name="com.parse.push.notification_icon"-->
-            <!--android:resource="@drawable/logo" />-->
+        <!--android:name="com.parse.push.notification_icon"-->
+        <!--android:resource="@drawable/logo" />-->
 
         <activity
             android:name="com.develeno.prestashopandroidclient.WalletActivity"
@@ -179,31 +175,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.develeno.prestashopandroidclient.ManageAccount" />
         </activity>
-        <activity
-            android:name="com.google.android.gms.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
-        <activity
-            android:name="com.google.android.gms.ads.purchase.InAppPurchaseActivity"
-            android:theme="@style/Theme.IAPTheme" />
-
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-        <provider
-            android:name="com.google.android.gms.measurement.AppMeasurementContentProvider"
-            android:authorities="com.develeno.prestashopandroidclient.google_measurement_service"
-            android:exported="false" />
-        <receiver
-            android:name="com.google.android.gms.measurement.AppMeasurementReceiver"
-            android:enabled="true">
-            <intent-filter>
-                <action android:name="com.google.android.gms.measurement.UPLOAD" />
-            </intent-filter>
-        </receiver>
-        <service
-            android:name="com.google.android.gms.measurement.AppMeasurementService"
-            android:enabled="true"
-            android:exported="false" />
 
     </application>
 </manifest>
